--- a/src/styles/Autocomplete.module.scss
+++ b/src/styles/Autocomplete.module.scss
@@ -75,3 +75,21 @@
     top: 10px;
     font-size: 10px;
 }
+
+.list {
+    overflow: hidden;
+    padding: 4px;
+    color: #111827;
+    border-radius: 4px;
+    border: 1px solid #d1d5db;
+    background-color: #ffffff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    max-height: 200px;
+    overflow-y: auto;
+    display: grid;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    margin-top: 4px;
+}
